@@ -1,3 +1,9 @@
+Sun Aug  3 19:09:59 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (command_dup): New function to duplicate a command.
+	  (pipeline_join): New function to join two pipelines together.
+	* lib/pipeline.h: Prototype these.
+
 Sun Aug  3 18:00:59 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.h (struct pipeline): The writeto, readfrom, writefd,
